--- a/index.html
+++ b/index.html
@@ -91,7 +91,15 @@
               </div>
               <!-- End Col -->
 
-              <div class="col"></div>
+              <div class="col">
+                <article class="sidebar">
+                  <div><a href="">Rush Fan Site Refactor</a></div>
+                  <div><a href="">Football Season Sim</a></div>
+                  <div><a href="">Silly Personal Page</a></div>
+                  <div><a href="">Sums and Nums</a></div>
+                  <div><a href="">Color Frankenstein Mixer</a></div>
+                </article>
+              </div>
             </div>
             <!-- End Modal Grid -->
           </div>
