edited case study list, added image popup, edits to copy
Removed 'Frankenstein: The Color Mixer' from case studies list, added 'Google Maps Custom API' and 'Nine Funny Words'

Added album cover image pop-up to 'Rush Fan Site Refactor'

Edits to copy on 'Rush Fan Site Refactor'

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         >
         <a id="silly-open" class="a-btn silly-open-js" href="#">Silly</a>
         <a id="sums-open" class="a-btn sums-open-js" href="#">Sums</a>
-        <a id="color-open" class="a-btn color-open-js" href="#">Color</a>
+        <a id="quiz-open" class="a-btn quiz-open-js" href="#">Quiz</a>
+        <a id="google-open" class="a-btn google-open-js" href="#">Google</a>
       </article>
     </main>
 
@@ -78,7 +79,7 @@
                 <div>
                   <article>
                     <span id="subhead1" class="text-bold">Description:</span>
-                    <span id="copy1"></span>
+                    <span id="copy1"><span id="album-pop"></span></span>
                   </article>
                   <article>
                     <span id="subhead2" class="text-bold">Problem:</span
@@ -115,8 +116,11 @@
                 <div class="sums-bg">
                   <a href="#" class="sums-open-js">Sums and Nums</a>
                 </div>
-                <div class="color-bg">
-                  <a href="#" class="color-open-js">Frankenstein Color Mixer</a>
+                <div class="quiz-bg">
+                  <a href="#" class="quiz-open-js">Nine Funny Words</a>
+                </div>
+                <div class="google-bg">
+                  <a href="#" class="google-open-js">Google Maps Custom API</a>
                 </div>
               </article>
             </div>
@@ -128,7 +132,17 @@
       </div>
       <!-- End Modal Window -->
     </div>
-    <!-- End Modal 
+    <!-- End Modal -->
+
+    <div class="album hidden">
+      <img
+        src="assets/images/rush-cover-600x600.jpg"
+        width="120px"
+        height="120px"
+        alt="Rush Album Cover"
+      />
+      <p>Rush—1974</p>
+    </div>
 
     <!-- Footer -->
     <footer>Footer content</footer>
@@ -139,6 +153,7 @@
     <script src="./scripts/football.js"></script>
     <script src="./scripts/silly.js"></script>
     <script src="./scripts/sums.js"></script>
-    <script src="./scripts/color.js"></script>
+    <script src="./scripts/quiz.js"></script>
+    <script src="./scripts/google.js"></script>
   </body>
 </html>
